--- a/src/style.css
+++ b/src/style.css
@@ -224,6 +224,16 @@ canvas {
     max-width: 100vw !important;
     padding: 0 2vw !important;
   }
+  #ui {
+    min-width: 0 !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
+    left: 0 !important;
+    transform: none !important;
+    border-radius: 0 0 18px 18px !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
 }
 
 @media (max-width: 700px) {
