--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+html, body, #root, #root > * {
+  width: 100vw !important;
+  height: 100vh !important;
+  min-width: 100vw !important;
+  min-height: 100vh !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+}
 html, body, #root {
   width: 100vw;
   height: 100vh;
